@@ -726,13 +726,13 @@ Audio	*Audio::get_ptr(void)
 /*
  *	This returns a 'unique' ID, but only for .wav SFX's (for now).
  */
-AudioID	Audio::play_sound_effect (int num, int volume)
+AudioID	Audio::play_sound_effect (int num, int volume, int dir)
 {
 	if (!audio_enabled || !effects_enabled) return AudioID(0, 0);
 
 	// Where sort of sfx are we using????
 	if (sfx_file != 0)		// Digital .wav's?
-		return play_wave_sfx(num, volume);
+		return play_wave_sfx(num, volume, dir);
 	else if (midi != 0) 
 		midi->start_sound_effect(num);
 	return AudioID(0, 0);
@@ -744,7 +744,8 @@ AudioID	Audio::play_sound_effect (int num, int volume)
 AudioID Audio::play_wave_sfx
 	(
 	int num,
-	int volume			// 0-128.
+	int volume,			// 0-128.
+	int dir				// 0-15, from North, clockwise.
 	)
 	{
 	extern int bgconv[];
@@ -780,7 +781,7 @@ AudioID Audio::play_wave_sfx
 			each->next = sfxs;
 			sfxs = each;
 			}
-		return mixer->play(each->buf, each->len, volume);
+		return mixer->play(each->buf, each->len, volume, dir);
 		}
 	if (cnt == max_cached)		// Hit our limit?  Remove last.
 		{
@@ -812,7 +813,7 @@ AudioID Audio::play_wave_sfx
 	SDL_ConvertAudio(&cvt);
 					// Cache at head of chain.
 	sfxs = new SFX_cached(num, cvt.buf, cvt.len_cvt, sfxs);
-	return mixer->play(cvt.buf, cvt.len_cvt, volume);
+	return mixer->play(cvt.buf, cvt.len_cvt, volume, dir);
 	}
 
 
