@@ -42,6 +42,7 @@ public:
 	AudioID(ProducerConsumerBuf *p, uint32 s) : pcb(p), seq(s)
 		{  }
 	void set_volume(int v);		// 0-128.
+	void set_dir(int d);		// 0-15
 	bool is_active()
 		{ return pcb && pcb->get_seq() == seq && pcb->is_active(); }
 	};
@@ -68,8 +69,10 @@ public:
 	SDL_mutex	*stream_mutex;
 	void	stream_lock(void) { SDL_mutexP(stream_mutex); };
 	void	stream_unlock(void) { SDL_mutexV(stream_mutex); };
+	void	modify_stereo16(sint16 *data, int cnt, int dir16);
 	void fill_audio_func(void *, uint8 *, int);
-	AudioID play(uint8 *, uint32, int volume = SDL_MIX_MAXVOLUME);
+	AudioID play(uint8 *, uint32, int volume = SDL_MIX_MAXVOLUME,
+							int dir = 0);
 	ProducerConsumerBuf *Create_Audio_Stream(uint32 type);
 	void	Destroy_Audio_Stream(uint32 type);
 	void	cancel_streams(void);
